@@ -46,6 +46,7 @@
     Translation strings adjusted #322 #318 #325 #326
     save session delayed on tab change if save tabs
     path bar steal enter key
+    improved overwrite dir #330 #312
 0.8.7   2013-03-17:
     added translation files to transifex.com [Delix]
     Delix and Aqualung71 contributed to German translation
